Fixed user-popup for mobile too big

--- a/MastermindsApp/client/src/app/user-popup-box/user-popup-box.component.scss
+++ b/MastermindsApp/client/src/app/user-popup-box/user-popup-box.component.scss
@@ -67,6 +67,7 @@ h1 {
 @media (max-width: $mobile-width) {
   .userPopUp {
     margin: 0.5em;
+    padding-bottom: 0;
   }
 
   .errormessage {
